more html framework laid out

--- a/index.html
+++ b/index.html
@@ -18,8 +18,35 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate, orci eget dapibus aliquam, arcu urna tempor lectus, mattis malesuada felis diam vitae ligula. Donec non orci a augue mattis pretium eget sit amet eros. Vestibulum odio dui, hendrerit id fringilla in, suscipit vitae enim. Nullam rutrum sem non orci feugiat, ac sodales elit accumsan. Suspendisse venenatis odio neque, lacinia venenatis lorem facilisis nec. Quisque ac suscipit magna. Sed blandit massa vitae ullamcorper porttitor. Fusce venenatis urna quis orci faucibus pulvinar. Nulla porta lacus eros, a volutpat orci rhoncus eu. Integer dapibus consectetur pellentesque.
             <p>Quisque id ipsum nec nunc accumsan interdum fringilla id lacus. Curabitur quis erat vitae metus aliquet tristique. Quisque consectetur nulla ut velit venenatis, sit amet vulputate metus vulputate. Integer tellus ipsum, tempor in arcu vel, congue ullamcorper est. Integer eget aliquam est, in molestie enim. Curabitur ac felis metus. Aenean in maximus risus. Vestibulum tempus, lorem eget faucibus sodales, risus orci volutpat diam, ac consequat justo orci vitae eros. Maecenas ac eros ac ipsum luctus consectetur at a metus. Aenean nec tortor ullamcorper, molestie ex nec, convallis erat. Praesent purus eros, pretium nec libero sit amet, aliquet ornare nibh.</p>
         </section>
-
-
+        <section class="content projects">
+            <h2>My Projects</h2>
+            <div class="flex-container">
+                <div class="flex-card">
+                    <a href="http://bluesatyr.github.io/okamisca">Historical Reenactment Website</a>
+                    <p class="description"></p>
+                </div>
+                <div class="flex-card">
+                    <a href="http://bluesatyr.github.io/run-buddy">Run Buddy Website</a>
+                    <p class="description"></p>
+                </div>
+                <div class="flex-card">
+                    <a href="#">Japanese Clock App</a>
+                    <p class="description"></p>
+                </div>
+                <div class="flex-card">
+                    <a href="#">Flash Fun Flashcard App</a>
+                    <p class="description"></p>
+                </div>
+                <div class="flex-card">
+                    <a href="#">Project #</a>
+                    <p class="description"></p>
+                </div>
+                <div class="flex-card">
+                    <a href="#">Project #</a>
+                    <p class="description"></p>
+                </div>
+            </div>
+        </section>
     </section>
 </body>
 </html>
