--- a/index.html
+++ b/index.html
@@ -4,47 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shawn's Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
     <header>
-        <nav></nav>
+        <h1>Shawn Evans</h1>
+        <nav>
+            <ul>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <section id="hero">
-        <h2>Cool Subtitle</h2>
+        <div>
+            <h2>Cool Subtitle</h2>
+        </div>
     </section>
     <section class="main-content">
         <section class="content about-me">
-            <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate, orci eget dapibus aliquam, arcu urna tempor lectus, mattis malesuada felis diam vitae ligula. Donec non orci a augue mattis pretium eget sit amet eros. Vestibulum odio dui, hendrerit id fringilla in, suscipit vitae enim. Nullam rutrum sem non orci feugiat, ac sodales elit accumsan. Suspendisse venenatis odio neque, lacinia venenatis lorem facilisis nec. Quisque ac suscipit magna. Sed blandit massa vitae ullamcorper porttitor. Fusce venenatis urna quis orci faucibus pulvinar. Nulla porta lacus eros, a volutpat orci rhoncus eu. Integer dapibus consectetur pellentesque.
-            <p>Quisque id ipsum nec nunc accumsan interdum fringilla id lacus. Curabitur quis erat vitae metus aliquet tristique. Quisque consectetur nulla ut velit venenatis, sit amet vulputate metus vulputate. Integer tellus ipsum, tempor in arcu vel, congue ullamcorper est. Integer eget aliquam est, in molestie enim. Curabitur ac felis metus. Aenean in maximus risus. Vestibulum tempus, lorem eget faucibus sodales, risus orci volutpat diam, ac consequat justo orci vitae eros. Maecenas ac eros ac ipsum luctus consectetur at a metus. Aenean nec tortor ullamcorper, molestie ex nec, convallis erat. Praesent purus eros, pretium nec libero sit amet, aliquet ornare nibh.</p>
+            <div class="content-heading">
+                <h2>About Me</h2>
+            </div>
+            <div class="about-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate, orci eget dapibus aliquam, arcu urna tempor lectus, mattis malesuada felis diam vitae ligula. Donec non orci a augue mattis pretium eget sit amet eros. Vestibulum odio dui, hendrerit id fringilla in, suscipit vitae enim. Nullam rutrum sem non orci feugiat, ac sodales elit accumsan. Suspendisse venenatis odio neque, lacinia venenatis lorem facilisis nec. Quisque ac suscipit magna. Sed blandit massa vitae ullamcorper porttitor. Fusce venenatis urna quis orci faucibus pulvinar. Nulla porta lacus eros, a volutpat orci rhoncus eu. Integer dapibus consectetur pellentesque.
+                <p>Quisque id ipsum nec nunc accumsan interdum fringilla id lacus. Curabitur quis erat vitae metus aliquet tristique. Quisque consectetur nulla ut velit venenatis, sit amet vulputate metus vulputate. Integer tellus ipsum, tempor in arcu vel, congue ullamcorper est. Integer eget aliquam est, in molestie enim. Curabitur ac felis metus. Aenean in maximus risus. Vestibulum tempus, lorem eget faucibus sodales, risus orci volutpat diam, ac consequat justo orci vitae eros. Maecenas ac eros ac ipsum luctus consectetur at a metus. Aenean nec tortor ullamcorper, molestie ex nec, convallis erat. Praesent purus eros, pretium nec libero sit amet, aliquet ornare nibh.</p>
+            </div>
         </section>
         <section class="content projects">
-            <h2>My Projects</h2>
-            <div class="flex-container">
-                <div class="flex-card">
+            <div class="content-heading">
+                <h2>My Projects</h2>
+            </div>
+            <div class="grid-container">
+                <div class="grid-card">
                     <a href="http://bluesatyr.github.io/okamisca">Historical Reenactment Website</a>
                     <p class="description"></p>
                 </div>
-                <div class="flex-card">
+                <div class="grid-card">
                     <a href="http://bluesatyr.github.io/run-buddy">Run Buddy Website</a>
                     <p class="description"></p>
                 </div>
-                <div class="flex-card">
+                <div class="grid-card">
                     <a href="#">Japanese Clock App</a>
                     <p class="description"></p>
                 </div>
-                <div class="flex-card">
+                <div class="grid-card">
                     <a href="#">Flash Fun Flashcard App</a>
                     <p class="description"></p>
                 </div>
-                <div class="flex-card">
+                <div class="grid-card">
                     <a href="#">Project #</a>
                     <p class="description"></p>
                 </div>
-                <div class="flex-card">
+                <div class="grid-card">
                     <a href="#">Project #</a>
                     <p class="description"></p>
                 </div>
+            </div>
+        </section>
+        <section class="content contact-info">
+            <div class="content-heading">
+                <h2>Contact Info</h2>
+            </div>
+            <div class="contact-text">
+                <p>Quisque id ipsum nec nunc accumsan interdum fringilla id lacus. Curabitur quis erat vitae metus aliquet tristique. Quisque consectetur nulla ut velit venenatis, sit amet vulputate metus vulputate.</p>
             </div>
         </section>
     </section>
