add font and text styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shawn's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
@@ -37,27 +39,23 @@
                 <h2>My Projects</h2>
             </div>
             <div class="grid-container">
-                <div class="grid-card">
+                <div class="grid-card card1">
                     <a href="http://bluesatyr.github.io/okamisca">Historical Reenactment Website</a>
                     <p class="description"></p>
                 </div>
-                <div class="grid-card">
+                <div class="grid-card card2">
                     <a href="http://bluesatyr.github.io/run-buddy">Run Buddy Website</a>
                     <p class="description"></p>
                 </div>
-                <div class="grid-card">
+                <div class="grid-card card3">
                     <a href="#">Japanese Clock App</a>
                     <p class="description"></p>
                 </div>
-                <div class="grid-card">
+                <div class="grid-card card4">
                     <a href="#">Flash Fun Flashcard App</a>
                     <p class="description"></p>
                 </div>
-                <div class="grid-card">
-                    <a href="#">Project #</a>
-                    <p class="description"></p>
-                </div>
-                <div class="grid-card">
+                <div class="grid-card card5">
                     <a href="#">Project #</a>
                     <p class="description"></p>
                 </div>
