add media queries

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Shawn Evans</h1>
         <nav>
             <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
         </div>
     </section>
     <section class="main-content">
-        <section class="content about-me">
+        <section class="content about-me" id="about-me">
             <div class="content-heading">
                 <h2>About Me</h2>
             </div>
@@ -34,7 +34,7 @@
                 <p>Quisque id ipsum nec nunc accumsan interdum fringilla id lacus. Curabitur quis erat vitae metus aliquet tristique. Quisque consectetur nulla ut velit venenatis, sit amet vulputate metus vulputate. Integer tellus ipsum, tempor in arcu vel, congue ullamcorper est. Integer eget aliquam est, in molestie enim. Curabitur ac felis metus. Aenean in maximus risus. Vestibulum tempus, lorem eget faucibus sodales, risus orci volutpat diam, ac consequat justo orci vitae eros. Maecenas ac eros ac ipsum luctus consectetur at a metus. Aenean nec tortor ullamcorper, molestie ex nec, convallis erat. Praesent purus eros, pretium nec libero sit amet, aliquet ornare nibh.</p>
             </div>
         </section>
-        <section class="content projects">
+        <section class="content projects" id="projects">
             <div class="content-heading">
                 <h2>My Projects</h2>
             </div>
@@ -61,12 +61,15 @@
                 </div>
             </div>
         </section>
-        <section class="content contact-info">
+        <section class="content contact-info" id="contact">
             <div class="content-heading">
                 <h2>Contact Info</h2>
             </div>
             <div class="contact-text">
-                <p>Quisque id ipsum nec nunc accumsan interdum fringilla id lacus. Curabitur quis erat vitae metus aliquet tristique. Quisque consectetur nulla ut velit venenatis, sit amet vulputate metus vulputate.</p>
+                <p>555.555.5555</p>
+                <p><a href="mailto:shawn@shawnevans.com">shawn@shawnevans.com</a></p>
+                <p><a href="https://github.com/bluesatyr">GitHub</a></p>
+                <p><a href="https://www.linkedin.com/in/shawn-c-evans/">LinkedIn</a></p>
             </div>
         </section>
     </section>
