add images to grid project cards

--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
             </div>
             <div class="grid-container">
                 <div class="grid-card card1">
-                    <a href="http://bluesatyr.github.io/okamisca">Historical Reenactment Website</a>
+                    <a href="http://bluesatyr.github.io/okamisca"><h3>Historical Reenactment Website</h3></a>
                     <p class="description"></p>
                 </div>
                 <div class="grid-card card2">
-                    <a href="http://bluesatyr.github.io/run-buddy">Run Buddy Website</a>
+                    <a href="http://bluesatyr.github.io/run-buddy"><h3>Run Buddy Website</h3></a>
                     <p class="description"></p>
                 </div>
                 <div class="grid-card card3">
-                    <a href="#">Japanese Clock App</a>
+                    <a href="#"><h3>Japanese Clock App</h3></a>
                     <p class="description"></p>
                 </div>
                 <div class="grid-card card4">
-                    <a href="#">Flash Fun Flashcard App</a>
+                    <a href="#"><h3>FlashFun Flashcard App</h3></a>
                     <p class="description"></p>
                 </div>
                 <div class="grid-card card5">
-                    <a href="#">Project #</a>
+                    <a href="#"><h3>Project #</h3></a>
                     <p class="description"></p>
                 </div>
             </div>
