add formatting to project links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./assets/ShawnEvans-Resume.pdf">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -39,10 +40,11 @@
                 <h2>My Projects</h2>
             </div>
             <div class="grid-container">
-                <div class="grid-card card1">
-                    <a href="http://bluesatyr.github.io/okamisca"><h3>Historical Reenactment Website</h3></a>
-                    <p class="description"></p>
-                </div>
+                    <div class="grid-card card1">
+                        <a href="http://bluesatyr.github.io/okamisca"><h3>Historical Reenactment Website</h3></a>
+                        <p class="description"></p>
+                        <div class="overlay"></div>
+                    </div>
                 <div class="grid-card card2">
                     <a href="http://bluesatyr.github.io/run-buddy"><h3>Run Buddy Website</h3></a>
                     <p class="description"></p>
@@ -56,7 +58,7 @@
                     <p class="description"></p>
                 </div>
                 <div class="grid-card card5">
-                    <a href="#"><h3>Project #</h3></a>
+                    <a href="#"><h3>Coming Soon</h3></a>
                     <p class="description"></p>
                 </div>
             </div>
