fine tune hero section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </header>
     <section id="hero">
         <div>
-            <h2>Cool Subtitle</h2>
+            <img src="assets/images/avatar.jpg" />
+            <div class="subtitle">
+                <h2>Cool Subtitle</h2>
+            </div>
         </div>
     </section>
     <section class="main-content">
@@ -31,6 +34,7 @@
                 <h2>About Me</h2>
             </div>
             <div class="about-text">
+                
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate, orci eget dapibus aliquam, arcu urna tempor lectus, mattis malesuada felis diam vitae ligula. Donec non orci a augue mattis pretium eget sit amet eros. Vestibulum odio dui, hendrerit id fringilla in, suscipit vitae enim. Nullam rutrum sem non orci feugiat, ac sodales elit accumsan. Suspendisse venenatis odio neque, lacinia venenatis lorem facilisis nec. Quisque ac suscipit magna. Sed blandit massa vitae ullamcorper porttitor. Fusce venenatis urna quis orci faucibus pulvinar. Nulla porta lacus eros, a volutpat orci rhoncus eu. Integer dapibus consectetur pellentesque.
                 <p>Quisque id ipsum nec nunc accumsan interdum fringilla id lacus. Curabitur quis erat vitae metus aliquet tristique. Quisque consectetur nulla ut velit venenatis, sit amet vulputate metus vulputate. Integer tellus ipsum, tempor in arcu vel, congue ullamcorper est. Integer eget aliquam est, in molestie enim. Curabitur ac felis metus. Aenean in maximus risus. Vestibulum tempus, lorem eget faucibus sodales, risus orci volutpat diam, ac consequat justo orci vitae eros. Maecenas ac eros ac ipsum luctus consectetur at a metus. Aenean nec tortor ullamcorper, molestie ex nec, convallis erat. Praesent purus eros, pretium nec libero sit amet, aliquet ornare nibh.</p>
             </div>
@@ -60,7 +64,7 @@
                     </div>
                 </a>
                 
-                <a href="#" class="grid-card card3">
+                <a href="https://museum.seiko.co.jp/en/knowledge/relation_16/" class="grid-card card3">
                     <div>
                         <h3>Japanese Clock App</h3>
                         <p class="description"></p>
