fine tune layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
             <img src="assets/images/avatar.jpg" />
             <div class="subtitle">
-                <h2>Cool Subtitle</h2>
+                <h2>Full-Stack Developer</h2>
             </div>
         </div>
     </section>
@@ -80,7 +80,7 @@
                     </div>
                 </a>
                 
-                <a href="#"  class="grid-card card5">
+                <a href="https://appideagenerator.com/"  class="grid-card card5">
                     <div>
                         <h3>Coming Soon</h3>
                         <p class="description"></p>
