fix media query issues with profile image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <section id="hero">
         <div>
-            <img src="assets/images/avatar.jpg" />
+            <img class="centered" src="assets/images/avatar.jpg" />
             <div class="subtitle">
                 <h2>Full-Stack Developer</h2>
             </div>
