add tweet tracks

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="grid-container">
                 
             <!-- Individual Grid Items -->
-                <a href="http://bluesatyr.github.io/okamisca" class="grid-card card1">
+                <a href="https://projone.github.io/tweet-tracks/" class="grid-card card1">
                     <div>
-                        <h3>Historical Reenactment Website</h3>
+                        <h3>Tweet Tracks</h3>
                         <p class="description"></p>
                         <div class="overlay"></div>
                     </div>
@@ -85,9 +85,9 @@
                     </div>
                 </a>
                 
-                <a href="https://appideagenerator.com/"  class="grid-card card5">
+                <a href="http://bluesatyr.github.io/okamisca"  class="grid-card card5">
                     <div>
-                        <h3>Coming Soon</h3>
+                        <h3>Historical Reenactment Website</h3>
                         <p class="description"></p>
                         <div class="overlay"></div>
                     </div>
