add swatch to portfolio

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="grid-container">
                 
             <!-- Individual Grid Items -->
-                <a href="https://projone.github.io/tweet-tracks/" class="grid-card card1">
+                <a href="https://swatch-makeup-reviews.herokuapp.com/" class="grid-card card1">
                     <div>
-                        <h3>Tweet Tracks</h3>
+                        <h3>SWATCH makeup Reviews</h3>
                         <p class="description"></p>
                         <div class="overlay"></div>
                     </div>
@@ -77,9 +77,9 @@
                     </div>
                 </a>
                 
-                <a href="#" class="grid-card card4">
+                <a href="https://projone.github.io/tweet-tracks/" class="grid-card card4">
                     <div>
-                        <h3>FlashFun Flashcard App</h3>
+                        <h3>Tweet Tracks</h3>
                         <p class="description"></p>
                         <div class="overlay"></div>
                     </div>
